# nocap

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  design_choices.md  plan.md  research.md
benchmark/implementations/: adam.py  adam_buggy.py  adam_clean.py  attention_buggy.py  attention_clean.py  ddpm_claude.py  ddpm_claude_clean.py
nocap-council/: README.md  pyproject.toml
nocap-council/nocap_council/: cli.py  client.py  code.py  code_claim.py  code_extract.py  mongo_log.py  numerical_match.py  orchestrator.py  pair_match.py  paper_extract.py  plan.py  polygraph.py  spec.py  structural_match.py  sympy_match.py
nocap-council/nocap_council/prompts/: coder.txt  critic.txt  formulator.txt  grounding_verifier.txt  intent_anchor.txt  planner.txt  sanitizer.txt
nocap-frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
nocap-frontend/src/: middleware.ts
nocap-frontend/src/app/: globals.css  layout.tsx  page.tsx
nocap-frontend/src/app/api/auth/[auth0]/: route.ts
nocap-frontend/src/app/api/proxy/[...path]/: route.ts
nocap-frontend/src/app/dashboard/: page.tsx
nocap-frontend/src/app/trace/[id]/: page.tsx
nocap-frontend/src/components/: providers.tsx
nocap-frontend/src/components/auth/: UserBadge.tsx
nocap-frontend/src/components/canvas/: DotBackground.tsx
nocap-frontend/src/components/dashboard/: IssueDetail.tsx  IssueList.tsx  TraceCard.tsx
nocap-frontend/src/components/landing/: LandingPage.tsx
nocap-frontend/src/components/trace/: AnomalyPanel.tsx  PaperCodeViewer.tsx  TimingChart.tsx  VigilAuditPanel.tsx
nocap-frontend/src/components/ui/: button.tsx
nocap-frontend/src/lib/: api.ts  utils.ts
nocap-gateway/: Cargo.toml
nocap-gateway/src/: main.rs
nocap-gateway/src/routes/: mod.rs  replay.rs  slack.rs  traces.rs  verify.rs
phases/: phase-1.md  phase-2.md  phase-3.md
