[project]
name = "nocap-council"
version = "0.1.0"
description = "No Cap — paper-vs-code verifier council (Spec / Plan / Code / Polygraph)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.73.1",
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11",
    "pylatexenc>=2.10",
    "TexSoup>=0.3.1",
    "requests>=2.32",
    "click>=8.1",
    "rich>=13.7",
    "pymongo>=4.7",
    "redis>=5.0",
    "openai>=1.30",
    "unidiff>=0.7.5",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.scripts]
nocap = "nocap_council.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nocap_council"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
