# Owner: CLAUDE — Phase 2 task T2.8
[package]
name = "nocap-gateway"
version = "0.1.0"
edition = "2021"
description = "No Cap perimeter gateway: Slack + verify-impl + stream-trace fronted by Axum."
license = "MIT"

[[bin]]
name = "nocap-gateway"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
dotenvy = "0.15"
hex = "0.4"
hmac = "0.12"
mongodb = "2.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
